[ZMS]Tmp commit.

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -23,16 +23,19 @@
             android:layout_margin="5dp" />
 
         <com.zms.scratchcard.view.ScratchCard
+            android:id="@+id/scratchCard3"
             android:layout_width="@dimen/card_width"
             android:layout_height="@dimen/card_height"
             android:layout_margin="5dp" />
 
         <com.zms.scratchcard.view.ScratchCard
+            android:id="@+id/scratchCard4"
             android:layout_width="@dimen/card_width"
             android:layout_height="@dimen/card_height"
             android:layout_margin="5dp" />
 
         <com.zms.scratchcard.view.ScratchCard
+            android:id="@+id/scratchCard5"
             android:layout_width="@dimen/card_width"
             android:layout_height="@dimen/card_height"
             android:layout_margin="5dp" />
